compiler/tests/language/negative/memorySafety/mutexWriteWithoutLock.qn
import core::{Mutex}

pub mutexWriteWithoutLock() -> i64 {
  let mutex = Mutex<i64>(1)
  let changed = mutex.set(2)
  return changed.ref()
}
